--- a/src/main/resources/templates/view_data.html
+++ b/src/main/resources/templates/view_data.html
@@ -121,7 +121,7 @@
                         <form method="POST" action="/add_data_cart">
                             <label class="data-label" for="qty">Quantity:</label>
                             <!-- <input class="data-input-text" type="number" name="qty" id="qty" min="1" th:max="${asset.getAssetsize()}" required /> -->
-                            <span th:replace="quantity_control :: quantity_control(1, ${asset.getData_asset_id()})"></span>
+                            <span class="text-center center-block" th:replace="quantity_control :: quantity_control(1, ${asset.getData_asset_id()})"></span>
                             <input type="hidden" name="datasetID" th:value="${asset.getData_asset_id()}">
                             <button type="submit">Add To Cart</button>
                         </form>
@@ -156,7 +156,7 @@
                 </div>
             </div>
         </div> -->
-        
+
 
         <!-- Footer -->
         <footer>
