--- a/src/main/resources/templates/quantity_control.html
+++ b/src/main/resources/templates/quantity_control.html
@@ -2,19 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 	<div th:fragment="quantity_control(quantityValue, productID)">
-		<nav>
-			<ul class="pagination">
+			<ul class="pagination" id="quantityUl">
 				<li class="page-item">
 					<a class="page-link minusButton" href="" th:pid="${productID}"><b>-</b></a>
 				</li>
 				<li class="page-item">
-					<input type="text" th:value="${quantityValue}" class="form-control text-center" onkeydown="return false;" style="max-width: 55px; padding: 0px;" th:id="'quantity' + ${productID}" name="qty"/>
+					<input type="text" th:value="${quantityValue}" class="form-control text-center quantityInput" onkeydown="return false;" th:id="'quantity' + ${productID}" name="qty"/>
 				</li>
 				<li class="page-item">
 					<a class="page-link plusButton" href="" th:pid="${productID}"><b>+</b></a>
 				</li>
 			</ul>
-		</nav>	
 	</div>
 </body>
 </html>
